--- a/lib/sass/core/_dependent_components.sass
+++ b/lib/sass/core/_dependent_components.sass
@@ -11,3 +11,5 @@
 @import ../components/_tabs
 @import ../components/_tiles
 @import ../components/_tooltips
+@import ../components/_forms
+@import ../core/_direct-apply.sass
