--- a/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
@@ -37,7 +37,7 @@
 
 // BUTTONS
 // -------
-.button, button, input[type=submit]
+.button
   +button
   // TODO: Make loop
   &.button-primary
@@ -129,7 +129,7 @@
   +form-left
 
 .form_group
-  +form_group
+  +form_group('vertical')
 
 // GRID
 // ----
