--- a/lib/sass/core/_mixins.sass
+++ b/lib/sass/core/_mixins.sass
@@ -4,3 +4,19 @@
 
   h2, h3, h4, h5
     +xxs-heading
+
+=text-inputs
+  input[type="date"],
+  input[type="datetime"],
+  input[type="datetime-local"],
+  input[type="email"],
+  input[type="month"],
+  input[type="number"],
+  input[type="password"],
+  input[type="tel"],
+  input[type="search"],
+  input[type="text"],
+  input[type="time"],
+  input[type="url"],
+  input[type="week"]
+    @content
