--- a/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
@@ -54,6 +54,7 @@
 
 =button-size($size)
   +root-element($size: $size)
+  margin-bottom: 0
   font-size: 0.9rem * $size
   border-color: hsla(0, 0%, 0%, 0.15)
   padding:
