--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -131,6 +131,9 @@
 .form_group
   +form_group('vertical')
 
+  &.form_group-horizontal
+    +form_group('horizontal')
+
 // GRID
 // ----
 .container
