--- a/lib/sass/components/_forms.sass
+++ b/lib/sass/components/_forms.sass
@@ -68,3 +68,7 @@ select
   @if $orientation == 'horizontal'
     display: inline-block
     margin-bottom: 0
+
+    > *
+      display: inline-block
+      margin-right: $space/5
