Mixed looking good for now

--- a/lib/jade/docs/3.x/ui/forms/index.jade
+++ b/lib/jade/docs/3.x/ui/forms/index.jade
@@ -258,17 +258,17 @@ block variations
       label City, state, zip
 
       .form_group-horizontal
-        input(type="text")
-        input(type="text")
-        input(type="number")
+        input(type="text" style="width: 125px")
+        input(type="text" style="width: 50px")
+        input(type="number" style="width: 100px")
 
     .form_group.form_group-horizontal
       label Prefix
-      input(type="text")
+      input(type="text" style="width: 50px")
 
     .form_group.form_group-horizontal
       label Suffix
-      input(type="text")
+      input(type="text" style="width: 50px")
 
   :markdown
     ### States
