--- a/lib/sass/components/_forms.sass
+++ b/lib/sass/components/_forms.sass
@@ -67,7 +67,9 @@ select
 
   @if $orientation == 'horizontal'
     display: inline-block
-    margin-bottom: 0
+    margin:
+      bottom: 0
+      right: $space/5
 
     > *
       display: inline-block
