--- a/lib/sass/core/_direct-apply.sass
+++ b/lib/sass/core/_direct-apply.sass
@@ -5,7 +5,11 @@
 // what. This include should be included near the end of the 
 // import chain but before kickstart.sass to accomplish this.
 
+// Buttons
+// -------
+
 button,
 input[type="submit"],
 input[type="button"]
   +button
+
