--- a/rails/app/assets/stylesheets/kickstart_rails/core/_direct-apply.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_direct-apply.sass
@@ -5,7 +5,23 @@
 // what. This include should be included near the end of the 
 // import chain but before kickstart.sass to accomplish this.
 
+// Buttons
+// -------
+
 button,
 input[type="submit"],
 input[type="button"]
   +button
+
+// Forms
+// -----
+
+form
+  .error
+    +field-colors(map-get($colors, red))
+
+  .warning
+    +field-colors(map-get($colors, yellow))
+
+  .success
+    +field-colors(map-get($colors, green))
