--- a/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
@@ -131,6 +131,11 @@
 .form_group
   +form_group('vertical')
 
+  &.form_group-horizontal, 
+  .form_group-horizontal, 
+  .form-horizontal &
+    +form_group('horizontal')
+
 // GRID
 // ----
 .container
