--- a/rails/app/assets/stylesheets/kickstart_rails/components/_forms.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_forms.sass
@@ -3,8 +3,51 @@ label, legend
   font-weight: 500
   margin-bottom: $space/4
 
-form
+%error_message
+  font-style: italic
+  margin: 
+    top: 7px
+    bottom: 14px
+
+=form-default
   margin-bottom: $space
+
+  .errors, .warnings, .successes
+    p
+      @extend %error_message
+
+  .errors
+    +field-colors(map-get($colors, red))
+
+  .warnings
+    +field-colors(map-get($colors, yellow))
+
+  .successes
+    +field-colors(map-get($colors, green))
+
+  p
+    &.error, &.warning, &.success
+      @extend %error_message
+
+  label, span, p
+    &.error
+      color: map-get($colors, red)
+
+    &.warning
+      color: map-get($colors, yellow)
+
+    &.success
+      color: map-get($colors, green)
+
+  input, select
+    &.error
+      border-color: map-get($colors, red)
+
+    &.warning
+      border-color: map-get($colors, yellow)
+
+    &.success
+      border-color: map-get($colors, green)
 
 =input-styles
   +root-element
@@ -81,3 +124,7 @@ select
 
   +text-inputs
     border-color: $color
+
+  select
+    border-color: $color
+    background-color: $color
