--- a/lib/sass/components/_forms.sass
+++ b/lib/sass/components/_forms.sass
@@ -3,8 +3,18 @@ label, legend
   font-weight: 500
   margin-bottom: $space/4
 
+%error_message
+  font-style: italic
+  margin: 
+    top: 7px
+    bottom: 14px
+
 =form-default
   margin-bottom: $space
+
+  .errors, .warnings, .successes
+    p
+      @extend %error_message
 
   .errors
     +field-colors(map-get($colors, red))
@@ -15,13 +25,29 @@ label, legend
   .successes
     +field-colors(map-get($colors, green))
 
+  p
+    &.error, &.warning, &.success
+      @extend %error_message
+
   label, span, p
     &.error
       color: map-get($colors, red)
 
+    &.warning
+      color: map-get($colors, yellow)
+
+    &.success
+      color: map-get($colors, green)
+
   input, select
     &.error
       border-color: map-get($colors, red)
+
+    &.warning
+      border-color: map-get($colors, yellow)
+
+    &.success
+      border-color: map-get($colors, green)
 
 =input-styles
   +root-element
@@ -97,4 +123,11 @@ select
     color: $color
 
   +text-inputs
+    border-color: $color
+
+  select
+    border-color: $color
+    background-color: $color
+
+  textarea
     border-color: $color
