Moving to typography declaration to theme.

--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -24,6 +24,9 @@ $black: (lightest: #444, lighter: #333, light: #222)
 // Rainbow
 $colors: (red: #CA3518, orange: darkorange, yellow: #ffe312, green: #58AA00, blue: cornflowerblue, violet: darkmagenta)
 
+// Vendor libraries
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900,400italic)
+
 // Ten point design variables
 // --------------------------
 // Modifying just these ten variables will take care of 90% of your theme
