--- a/lib/sass/components/_forms.sass
+++ b/lib/sass/components/_forms.sass
@@ -86,7 +86,7 @@ select
   height: calc(#{$default-line-height} + #{2 * map-get($rootElement, paddingV)})
   background-image: none
 
-=form-horizontal-default()
+=form-horizontal
   label, input
     display: inline-block
 
