--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -167,8 +167,8 @@ html
 =form
   +form-default
 
-=form-horizontal()
-  +form-horizontal-default()
+=form-horizontal
+  +form-horizontal
 
 =form-left
   +form-left-default()
