--- a/rails/app/assets/stylesheets/kickstart_rails/components/_forms.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_forms.sass
@@ -65,6 +65,7 @@ label, legend
 
 textarea
   +input-styles
+  width: 300px
 
 input[type="checkbox"],
 input[type="radio"]
@@ -85,9 +86,10 @@ select
   height: calc(#{$default-line-height} + #{2 * map-get($rootElement, paddingV)})
   background-image: none
 
-=form-horizontal-default()
+=form-horizontal
   label, input
     display: inline-block
+  @content
 
 =form-left-default()
   label
