--- a/lib/jade/docs/3.x/ui/forms/index.jade
+++ b/lib/jade/docs/3.x/ui/forms/index.jade
@@ -26,6 +26,10 @@ block basic
       input(type="text" placeholder="Smith")
 
     .form_group
+      label Avatar
+      input(type="file")
+
+    .form_group
       label Issue size
 
       input(type="radio" name="issue" id="small")
@@ -68,11 +72,15 @@ block basic
           <form class="form">
             <div class="form-group">
               <label for="fname">First name</label>
-              <input name="fname" type="text" />
+              <input id="fname" type="text" />
             </div>
             <div class="form-group">
               <label for="lname">Last name</label>
-              <input name="lname" type="text" />
+              <input id="lname" type="text" />
+            </div>
+            <div class="form-group">
+              <label for="file">Avatar</label>
+              <input id="file" type="file" />
             </div>
             <div class="form-group">
               <label>Issue Size</label> 
@@ -98,11 +106,15 @@ block basic
           <form>
             <div class="group">
               <label for="fname">First name</label>
-              <input name="fname" type="text" />
+              <input id="fname" type="text" />
             </div>
             <div class="group">
               <label for="lname">Last name</label>
-              <input name="lname" type="text" />
+              <input id="lname" type="text" />
+            </div>
+            <div class="group">
+              <label for="file">Avatar</label>
+              <input id="file" type="file" />
             </div>
             <div class="group">
               <label>Issue Size</label> 
