--- a/lib/sass/core/_direct-apply.sass
+++ b/lib/sass/core/_direct-apply.sass
@@ -10,6 +10,8 @@
 
 button,
 input[type="submit"],
-input[type="button"]
+input[type="button"],
   +button
 
+input[type="file"]::-webkit-file-upload-button
+  +button
