Abandoning form extend effort

--- a/rails/app/assets/stylesheets/kickstart_rails/components/_forms.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_forms.sass
@@ -86,9 +86,10 @@ select
   height: calc(#{$default-line-height} + #{2 * map-get($rootElement, paddingV)})
   background-image: none
 
-=form-horizontal
+=form-horizontal-default
   label, input
     display: inline-block
+
   @content
 
 =form-left-default()
