--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -6,7 +6,7 @@
 
 =navbar-default($bleed-container: false, $background: map-get($white, dark))
   background: $background
-  border-top: 1px solid darken($background, 12%)
+  box-shadow: 0px 1px 0px darken($background, 12%) inset
   font-size: 0.9rem
 
   nav
@@ -135,6 +135,11 @@
           left: 1px solid map-get($white, darker)
           right: 1px solid map-get($white, darker)
           bottom: 1px solid map-get($white, darker)
+
+        &:before
+          display: block
+          position: absolute
+          content: ' '
 
         li
           border: 0px
