--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -125,7 +125,9 @@
   z-index: 10
 
 =button-group-default($color, $size)
-  +list-unstyled
+  list-style: none
+  padding: 0
+  margin-bottom: 0
 
   li
     color: inherit
