--- a/rails/app/assets/stylesheets/kickstart_rails/core/_typography.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_typography.sass
@@ -153,11 +153,15 @@ a
     bottom: 0.5rem
   +heading-break
 
+=list-default
+  margin-bottom: $space
+
 =list-unstyled-default
   padding: 0
-  margin: 0
-    bottom: $space
   list-style: none
+
+  > li
+    margin-bottom: 0.85rem
 
 =list-horizontal-default
   > li
