--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -112,6 +112,9 @@ h1.example-
   ul, ul li, .navbar
     text-align: left
 
+  .button-group
+    color: $default-font-color
+
   .logo
     width: 600px
     max-width: 95%
