--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -5,6 +5,7 @@
   color: map-get($black, light)
   text-align: left
   transition: box-shadow 0.15s
+  vertical-align: middle
 
   &.with-submenu
     position: relative
@@ -127,7 +128,11 @@
 =button-group-default($color, $size)
   list-style: none
   padding: 0
-  margin-bottom: 0
+  margin:
+    bottom: 0
+    top: 0
+  display: inline-block
+  vertical-align: middle
 
   li
     color: inherit
